@@ -7,6 +7,7 @@ import com.sprint.mission.discodeit.dto.channel.PublicChannelCreateRequest;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.ReadStatus;
+import com.sprint.mission.discodeit.exception.ApiException;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
@@ -16,11 +17,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
+import java.time.Instant;
+import java.util.*;
 import java.util.stream.Collectors;
+
+import static com.sprint.mission.discodeit.exception.ApiException.ERROR.*;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -34,21 +35,21 @@ public class BasicChannelService implements ChannelService {
     @Override
     public ChannelResponse createPublicChannel(PublicChannelCreateRequest publicChannelCreateRequest) {
         if (publicChannelCreateRequest.name() == null || publicChannelCreateRequest.name().isBlank())
-            throw new IllegalArgumentException("name is required. ❌");
+            throw new ApiException(CHANNEL_NAME_REQUIRED);
         if (this.channelRepository.existByName(publicChannelCreateRequest.name()))
-            throw new IllegalArgumentException("name cannot be duplicated. ❌");
+            throw new ApiException(CHANNEL_NAME_DUPLICATED);
 
-        Channel channel = new Channel(publicChannelCreateRequest);
+        Channel channel = new Channel(publicChannelCreateRequest.name(), publicChannelCreateRequest.description());
         this.channelRepository.save(channel);
 
         log.info("{} channel has been created successfully. ✅ [ID: {}]", channel.getName(), channel.getId());
-        return channel.toResponse(new ArrayList<>(), new ArrayList<>());
+        return this.toResponse(channel, new ArrayList<>(), new ArrayList<>());
     }
 
     @Override
     public ChannelResponse createPrivateChannel(PrivateChannelCreateRequest privateChannelCreateRequest) {
         if (privateChannelCreateRequest.participants() == null || privateChannelCreateRequest.participants().isEmpty())
-            throw new IllegalArgumentException("participants is required. ❌");
+            throw new ApiException(CHANNEL_PARTICIPANTS_REQUIRED);
 
         Channel channel = new Channel();
         this.channelRepository.save(channel);
@@ -58,24 +59,29 @@ public class BasicChannelService implements ChannelService {
                 .filter(this.userRepository::existById)
                 .toList();
 
+        if (participants.isEmpty())
+            throw new ApiException(CHANNEL_NO_VALID_PARTICIPANTS);
+
         participants.forEach(userId -> {
             ReadStatus status = new ReadStatus(userId, channel.getId());
             this.readStatusRepository.save(status);
         });
 
         log.info("private channel has been created successfully. ✅ [ID: {}]", channel.getId());
-        return channel.toResponse(new ArrayList<>(), participants);
+        return this.toResponse(channel, new ArrayList<>(), participants);
     }
 
     @Override
     public ChannelResponse findById(UUID id) {
         Channel channel = this.channelRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("requested channel not found. ❌"));
+                .orElseThrow(() -> new ApiException(CHANNEL_NOT_FOUND));
+
         List<Message> messages = this.messageRepository.findAllByChannelId(channel.getId());
         List<UUID> participants = this.readStatusRepository.findAllByChannelId(channel.getId()).stream()
                 .map(ReadStatus::getUserId)
                 .toList();
-        return channel.toResponse(messages, participants);
+
+        return this.toResponse(channel, messages, participants);
     }
 
     @Override
@@ -84,28 +90,38 @@ public class BasicChannelService implements ChannelService {
                 .map(ReadStatus::getChannelId)
                 .collect(Collectors.toSet());
 
-        return this.channelRepository.findAll().stream()
+        List<Channel> channels = this.channelRepository.findAll().stream()
                 .filter(channel -> !channel.isPrivate() || joinedPrivateChannelIds.contains(channel.getId()))
-                .map(channel -> {
-                    List<Message> messages = this.messageRepository.findAllByChannelId(channel.getId());
-                    List<UUID> participants = this.readStatusRepository.findAllByChannelId(channel.getId()).stream()
-                            .map(ReadStatus::getUserId)
-                            .toList();
-                    return channel.toResponse(messages, participants);
-                })
+                .toList();
+
+        List<UUID> channelIds = channels.stream().map(Channel::getId).toList();
+
+        Map<UUID, List<Message>> messagesByChannel = this.messageRepository.findAllByChannelIdIn(channelIds).stream()
+                .collect(Collectors.groupingBy(Message::getChannelId));
+
+        Map<UUID, List<UUID>> participantsByChannel = this.readStatusRepository.findAllByChannelIdIn(channelIds).stream()
+                .collect(Collectors.groupingBy(
+                        ReadStatus::getChannelId,
+                        Collectors.mapping(ReadStatus::getUserId, Collectors.toList())
+                ));
+
+        return channels.stream()
+                .map(channel -> this.toResponse(
+                        channel,
+                        messagesByChannel.getOrDefault(channel.getId(), new ArrayList<>()),
+                        participantsByChannel.getOrDefault(channel.getId(), new ArrayList<>())
+                ))
                 .toList();
     }
 
     @Override
-    public ChannelResponse updateChannel(ChannelUpdateRequest channelUpdateRequest) {
-        Channel channel = this.channelRepository.findById(channelUpdateRequest.id())
-                .orElseThrow(() -> new IllegalArgumentException("requested channel not found. ❌"));
-
-        if (channel.isPrivate()) throw new IllegalArgumentException("private channel cannot be updated. ❌");
-
+    public ChannelResponse updateChannel(UUID id, ChannelUpdateRequest channelUpdateRequest) {
+        Channel channel = this.channelRepository.findById(id)
+                .orElseThrow(() -> new ApiException(CHANNEL_NOT_FOUND));
+        if (channel.isPrivate()) throw new ApiException(CHANNEL_PRIVATE_UPDATE_FORBIDDEN);
         if (channelUpdateRequest.name() != null && !channelUpdateRequest.name().isBlank()) {
             if (!channel.getName().equals(channelUpdateRequest.name()) && this.channelRepository.existByName(channelUpdateRequest.name()))
-                throw new IllegalArgumentException("name cannot be duplicated. ❌");
+                throw new ApiException(CHANNEL_NAME_DUPLICATED);
             channel.updateName(channelUpdateRequest.name());
         }
 
@@ -119,18 +135,35 @@ public class BasicChannelService implements ChannelService {
                 .toList();
 
         log.info("{} channel has been updated successfully. ✅ [ID: {}]", channel.getName(), channel.getId());
-        return channel.toResponse(messages, participants);
+        return this.toResponse(channel, messages, participants);
     }
 
     @Override
     public void deleteChannel(UUID id) {
         Channel channel = this.channelRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("requested channel not found. ❌"));
+                .orElseThrow(() -> new ApiException(CHANNEL_NOT_FOUND));
 
         this.messageRepository.deleteAllByChannelId(channel.getId());
+
         this.readStatusRepository.deleteAllByChannelId(channel.getId());
+
         this.channelRepository.delete(channel);
 
         log.info("{} channel has been deleted successfully. ✅ [ID: {}]", channel.getName(), id);
+    }
+
+    private ChannelResponse toResponse(Channel channel, List<Message> messages, List<UUID> participants) {
+        Instant lastMessageAt = messages.stream()
+                .map(Message::getCreatedAt)
+                .max(Comparator.naturalOrder())
+                .orElse(null);
+        return new ChannelResponse(
+                channel.getId(),
+                channel.getName(),
+                channel.getDescription(),
+                channel.isPrivate(),
+                lastMessageAt,
+                channel.isPrivate() ? participants : null
+        );
     }
 }
